--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
   display: block;
   margin: 0;
   padding: 0;
+  font-family:   -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 9pt;
 }
 
 a {
